# sphiros

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  index-sort-f.html  index-sort-l.html  index.html  spack.yaml
.github/workflows/: deploy.yml
config/: spack-ghci.yaml
coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
docs/html/: annotated_dup.js  classEOSCRTP-members.html  classEOSCRTP.html  classEOSLinearGas-members.html  classEOSLinearGas.html  classEOSLinearGas.js  classEOSStiffenedGas.js  classes.html  dir_0a9fc31aab728f990a053f374d62ee5c.html  dir_0a9fc31aab728f990a053f374d62ee5c.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_689df5374f46a72a7f1c8390720533bf.html  dir_689df5374f46a72a7f1c8390720533bf.js  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.html  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.js  doxygen_crawl.html  eos__crtp_8hpp.html  eos__crtp_8hpp.js  eos__crtp_8hpp_source.html  eos__linear__gas_8hpp.html  eos__linear__gas_8hpp.js  eos__linear__gas_8hpp_source.html  eos__stiffened__gas_8cpp_source.html  eos__stiffened__gas_8hpp.html  eos__stiffened__gas_8hpp_source.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  navtreeindex0.js  pymeshio__wrapper_8hpp_source.html  sphiros_8cpp.html  sphiros_8cpp_source.html
docs/latex/: classEOSCRTP.tex  classEOSLinearGas.tex  (+12 more)
examples/: sod.yaml  sphere.pvtu
html/: annotated.html  classEOSCRTP.js  classEOSStiffenedGas-members.html  classEOSStiffenedGas.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  eos__linear__gas_8cpp_source.html  eos__stiffened__gas_8hpp.js  functions_vars.html  index.html  navtreedata.js  navtreeindex0.js  sphiros_8cpp.html  sphiros_8cpp.js  sphiros_8cpp_source.html
latex/: annotated.tex  classEOSLinearGas.eps  classEOSStiffenedGas.tex  eos__linear__gas_8hpp.tex  eos__linear__gas_8hpp_source.tex  hierarchy.tex  sphiros_8cpp.tex
src/: CMakeLists.txt  sphiros.cpp
src/eos/: CMakeLists.txt  eos_crtp.hpp  eos_linear_gas.hpp  eos_linear_gas.hpp.func-c.html  eos_linear_gas.hpp.func.html  eos_linear_gas.hpp.gcov.html  eos_stiffened_gas.hpp  eos_stiffened_gas.hpp.func-c.html  eos_stiffened_gas.hpp.func.html  eos_stiffened_gas.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
src/io/: CMakeLists.txt  pymeshio_wrapper.hpp
tests/: CMakeLists.txt
tests/eos/: CMakeLists.txt  eos_linear_gas.cpp  eos_linear_gas.cpp.func-c.html  eos_linear_gas.cpp.func.html  eos_linear_gas.cpp.gcov.html  eos_stiffened_gas.cpp  eos_stiffened_gas.cpp.func-c.html  eos_stiffened_gas.cpp.func.html  eos_stiffened_gas.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
(+31 files in other folders)
